# test_chat

./: Cargo.toml  build.rs
src/: chatManager.rs  error.rs  lib.rs  main.rs  utils.rs
tests/: integration_test.rs
