[package]
name = "serveur_chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
mongodb = "2.1.0"
serde = "1.0.132"
