[package]
name = "serveur_chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
serde = { version = "1.0.132", features = ["derive"] }
bson = "2.0.0"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]